test/tests/stages/13_floating-point_numbers/invalid_types/extra_credit/compound_right_bitshift.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[19]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(i)
  =
  const int(1000)
  ;
  identifier(i)
  >>=
  const double(2.0)
  ;
  return
  identifier(i)
  ;
  }
